--- a/Launcher/config.json
+++ b/Launcher/config.json
@@ -12,11 +12,11 @@
   "algorithm-type-name": "BasicTemplateFrameworkAlgorithm",
 
   // Algorithm language selector - options CSharp, Python
-  "algorithm-language": "CSharp",
+  "algorithm-language": "Python",
 
   //Physical DLL location
-  "algorithm-location": "QuantConnect.Algorithm.CSharp.dll",
-  //"algorithm-location": "../../../Algorithm.Python/BasicTemplateFrameworkAlgorithm.py",
+  //"algorithm-location": "QuantConnect.Algorithm.CSharp.dll",
+  "algorithm-location": "../../../Algorithm.Python/BasicTemplateFrameworkAlgorithm.py",
 
   //Research notebook
   //"composer-dll-directory": ".",
@@ -25,8 +25,8 @@
   "data-folder": "../../../Data/",
 
   // debugging configuration - options for debugging-method LocalCmdLine, VisualStudio, Debugpy, PyCharm
-  "debugging": false,
-  "debugging-method": "LocalCmdline",
+  "debugging": true,
+  "debugging-method": "Debugpy",
 
   // location of a python virtual env to use libraries from
   //"python-venv": "/venv",
