--- a/Launcher/config.json
+++ b/Launcher/config.json
@@ -26,7 +26,7 @@
 
   // debugging configuration - options for debugging-method LocalCmdLine, VisualStudio, Debugpy, PyCharm
   "debugging": true,
-  "debugging-method": "Debugpy",
+  "debugging-method": "DebugPy",
 
   // location of a python virtual env to use libraries from
   //"python-venv": "/venv",
